--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-xl-8 text-center">
-              <h1 class="font-weight-bold text-primary wow fadeInUp" data-wow-delay=".1s">Loving God, loving others and serving the world</h1>
-              <p class="wow fadeInUp text-sm" data-wow-delay=".2s">Welcome to Rise church, your #1 place to praise the Lord.</p>
+              <h1 class="font-weight-bold text-primary wow fadeInUp" data-wow-delay=".1s">Where Love Abound And Destinies Are Fulfilled</h1>
+              <p class="wow fadeInUp text-sm" data-wow-delay=".2s">Welcome to Redeemed Christian Church of God Church of Nazarene, your #1 place to praise the Lord.</p>
             </div>
           </div>
         </div>
@@ -106,7 +106,7 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-xl-8 col-lg-10">
-              <div class="pre-title wow fadeInLeft" data-wow-delay=".1s">Welcome to Rise Church</div>
+              <div class="pre-title wow fadeInLeft" data-wow-delay=".1s">Welcome to the Redeemed Christian Church of God Church of Nazarene</div>
               <h2 class="wow fadeInRight" data-wow-delay=".2s">Sharing the God’s love with everyone</h2>
               <p class="text-sm wow fadeInUp" data-wow-delay=".3s">Our mission is helping people find their way back to God. We accomplish this by reaching people far from God, restoring God’s dream for the world, and reproducing this mission in others. There are three key relationships that help you develop a growing relationship with Jesus.</p><a class="shadow btn btn-icon btn-icon-right btn-secondary btn-svg offset-xl-55 wow fadeInUp" href="about-us.html" data-wow-delay=".3s"><span class="svg-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" width="18" height="10" viewbox="0 0 18 10" fill="#fff">
