--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!--RD Navbar Brand-->
                   <div class="rd-navbar-brand">
-                    <!--Brand--><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/logo-default-189x54.png" alt="" width="94" height="27"/><img class="brand-logo-light" src="images/logo-default-189x54.png" alt="" width="94" height="27"/></a>
+                    <!--Brand--><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/redeemFull.png" alt="" width="350" height="250"/><img class="brand-logo-light" src="images/redeem-logo2.jpeg" alt="" width="94" height="27"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-main-element">
@@ -95,7 +95,7 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-xl-8 text-center">
-              <h1 class="font-weight-bold text-primary wow fadeInUp" data-wow-delay=".1s">Where Love Abound And Destinies Are Fulfilled</h1>
+              <h1 class="font-weight-bold text-primary wow fadeInUp" data-wow-delay=".1s">Where Love Abounds And Destinies Are Fulfilled</h1>
               <p class="wow fadeInUp text-sm" data-wow-delay=".2s">Welcome to Redeemed Christian Church of God Church of Nazarene, your #1 place to praise the Lord.</p>
             </div>
           </div>
