--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html class="wide wow-animation" lang="en">
   <head>
     <title>Home</title>
+    <link rel="icon" type="image/x-icon" href="/images/redeem-logo.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <script src="/cdn-cgi/apps/head/3ts2ksMwXvKRuG480KNifJ2_JNM.js"></script> -->
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" href="images/favicon.ico" type="image/x-icon"> -->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:400,500%7CIbarra+Real+Nova:400,600,600i,700">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -42,7 +43,7 @@
                   <li>
                     <div class="unit unit-spacing-xs align-items-center">
                       <div class="unit-left"><span class="icon text-middle mdi-map-marker mdi"></span></div>
-                      <div class="unit-body"><a href="#">178 West 27th Street New York, NY 10012</a></div>
+                      <div class="unit-body"><a href="#">Palmgrove Estate, 16 Commonwealth Ave, Ilupeju 100231, Lagos</a></div>
                     </div>
                   </li>
                 </ul>
@@ -62,7 +63,7 @@
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!--RD Navbar Brand-->
                   <div class="rd-navbar-brand">
-                    <!--Brand--><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/redeemFull.png" alt="" width="350" height="250"/><img class="brand-logo-light" src="images/redeem-logo2.jpeg" alt="" width="94" height="27"/></a>
+                    <!--Brand--><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/redeemFull.png" alt="" width="350" height="250"/><img class="brand-logo-light" src="images/redeemFull.png" alt="" width="94" height="27"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-main-element">
@@ -312,7 +313,7 @@
               <div class="col-lg-5 inset-right-100 wow fadeInRight" data-wow-delay=".3s">
                 <div class="footer-title">Contact us</div>
                 <ul class="contact-list">
-                  <li>178 West 27th Street New York, NY 10012 Questions? Please write us at:<a class="link-secondary" href="mailto:#">info@demolink.org</a></li>
+                  <li>Palmgrove Estate, 16 Commonwealth Ave, Ilupeju 100231, Lagos Questions? Please write us at:<a class="link-secondary" href="mailto:#">info@demolink.org</a></li>
                   <li><span>Call us:</span><a class="phone" href="tel:#">+1 705 55 50 000</a></li>
                 </ul>
                 <ul class="social-list">
@@ -329,10 +330,10 @@
           <div class="container">
             <div class="row row-xl-40">
               <div class="col-12 wow fadeInUp" data-wow-delay=".2s">
-                <p>Rise Church is a Family of Faith that is committed to Bible teaching and joyful worship. Children, youth and adults of all ages are ministered to and given opportunities to serve the Lord by serving others. You are invited to join us and experience what it is like to be a part of the family. We have much to offer you. Rise is a state Church where each person is made to feel welcomed and wanted. We take seriously our mission statement, which is "To Know Jesus and make Him known; To Follow the Leadership of the Holy Spirit; and to Take God's Word to God's World."</p>
+                <p>Church of Nazarene is a Family of Faith that is committed to Bible teaching and joyful worship. Children, youth and adults of all ages are ministered to and given opportunities to serve the Lord by serving others. You are invited to join us and experience what it is like to be a part of the family. We have much to offer you. Rise is a state Church where each person is made to feel welcomed and wanted. We take seriously our mission statement, which is "To Know Jesus and make Him known; To Follow the Leadership of the Holy Spirit; and to Take God's Word to God's World."</p>
               </div>
               <div class="col-12 wow fadeInUp" data-wow-delay=".4s">
-                <p class="rights"><span>&copy;&nbsp; </span><span class="copyright-year"></span><span>&nbsp;</span><span>Rise</span><span>.&nbsp;</span><span>All Rights Reserved.</span></p>
+                <p class="rights"><span>&copy;&nbsp; </span><span class="copyright-year"></span><span>&nbsp;</span><span>RCCG CON</span><span>.&nbsp;</span><span>All Rights Reserved.</span></p>
               </div>
             </div>
           </div>
