--- a/ministries.html
+++ b/ministries.html
@@ -37,13 +37,13 @@
                   <li>
                     <div class="unit unit-spacing-xs align-items-center">
                       <div class="unit-left"><span class="icon text-middle mdi-phone-in-talk mdi"></span></div>
-                      <div class="unit-body"><a href="tel:#">1-800-1234-5671</a></div>
+                      <div class="unit-body"><a href="tel:#">+234 812 744 6686</a></div>
                     </div>
                   </li>
                   <li>
                     <div class="unit unit-spacing-xs align-items-center">
                       <div class="unit-left"><span class="icon text-middle mdi-map-marker mdi"></span></div>
-                      <div class="unit-body"><a href="#">178 West 27th Street New York, NY 10012</a></div>
+                      <div class="unit-body"><a href="#">Palmgrove Estate, 16 Commonwealth Ave, Ilupeju, Lagos, Nigeria</a></div>
                     </div>
                   </li>
                 </ul>
