--- a/index.html
+++ b/index.html
@@ -254,16 +254,16 @@
       <section class="section section-lg bg-default">
         <div class="container">
           <div class="pre-title text-center wow fadeInUp" data-wow-delay=".1s">Where to find us</div>
-          <h2 class="wow fadeInUp text-center" data-wow-delay=".2s">Our Churches</h2>
+          <h2 class="wow fadeInUp text-center" data-wow-delay=".2s">Our Church</h2>
           <div class="row row-narrow-50 row-40 row-xl">
             <div class="col-lg-6 wow fadeInUp" data-wow-delay=".3s">
               <div class="thumbnail-classic"><a class="thumbnail-classic__media" href="#"><img src="images/home-3-610x458.jpg" alt="" width="610" height="458"/></a>
-                <h3><a href="#">Rise in New York</a></h3><a class="location" href="#"><span class="icon mdi-map-marker mdi"></span>178 West 27th Street New York, NY 10012</a>
+                <h3><a href="#">RCCG CON in Lagos Nigeria</a></h3><a class="location" href="#"><span class="icon mdi-map-marker mdi"></span>Palmgrove Estate, 16 Commonwealth Ave, Ilupeju, Lagos, Nigeria</a>
               </div>
             </div>
             <div class="col-lg-6 wow fadeInUp" data-wow-delay=".3s">
               <div class="thumbnail-classic"><a class="thumbnail-classic__media" href="#"><img src="images/home-4-610x458.jpg" alt="" width="610" height="458"/></a>
-                <h3><a href="#">Rise in Florida</a></h3><a class="location" href="#"><span class="icon mdi-map-marker mdi"></span>38 Depot Court Port Orange, FL 32127</a>
+                <!-- <h3><a href="#">Rise in Florida</a></h3><a class="location" href="#"><span class="icon mdi-map-marker mdi"></span>38 Depot Court Port Orange, FL 32127</a> -->
               </div>
             </div>
           </div>
