--- a/events.html
+++ b/events.html
@@ -76,10 +76,10 @@
                       <li class="rd-nav-item"><a class="rd-nav-link" href="ministries.html">Ministries</a>
                       </li>
                       <li class="rd-nav-item active"><a class="rd-nav-link" href="events.html">Events</a>
-                        <ul class="rd-menu rd-navbar-dropdown">
+                        <!-- <ul class="rd-menu rd-navbar-dropdown">
                           <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="single-event.html">Single Event</a>
                           </li>
-                        </ul>
+                        </ul> -->
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
                       </li>
