--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+    <div class="elfsight-app-bf938edd-0890-45d4-8fb1-3d29d9f3a97c" data-elfsight-app-lazy></div>
   </head>
   <body>
     <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
@@ -64,6 +66,7 @@
                   <!--RD Navbar Brand-->
                   <div class="rd-navbar-brand">
                     <!--Brand--><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/redeemFull.png" alt="" width="350" height="250"/><img class="brand-logo-light" src="images/redeemFull.png" alt="" width="94" height="27"/></a>
+                    <!-- <h5>Church of Nazarene</h5> -->
                   </div>
                 </div>
                 <div class="rd-navbar-main-element">
